manifests/rancher/01-rancher-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rancher
  namespace: cattle-system
  labels:
    app: rancher
    app.kubernetes.io/name: rancher
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: rancher
  template:
    metadata:
      labels:
        app: rancher
    spec:
      serviceAccountName: rancher
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/os
                operator: NotIn
                values:
                - windows
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - rancher
              topologyKey: kubernetes.io/hostname
      tolerations:
      - key: cattle.io/os
        operator: Equal
        value: linux
        effect: NoSchedule
      containers:
      - name: rancher
        image: rancher/rancher:v2.13.1
        imagePullPolicy: IfNotPresent
        args:
        - --http-listen-port=80
        - --https-listen-port=443
        - --add-local=true
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        - name: https
          containerPort: 443
          protocol: TCP
        - name: imperative
          containerPort: 6666
          protocol: TCP
        startupProbe:
          httpGet:
            path: /healthz
            port: 80
            scheme: HTTP
          failureThreshold: 12
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
            scheme: HTTP
          failureThreshold: 5
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
            scheme: HTTP
          failureThreshold: 5
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
---
