manifests/rancher/02-rancher-service-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: rancher
  namespace: cattle-system
  labels:
    app.kubernetes.io/name: rancher
    app: rancher
spec:
  type: ClusterIP
  selector:
    app: rancher
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
---
